<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:text="@string/btn1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:text="@string/btn2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:text="@string/btn3" />
        
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:text="@string/text1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textSize="40sp"
            android:text="@string/text2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/text3" />


    </LinearLayout>

</LinearLayout>